This is a modified file

--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 This is my first file
-This file i am makeing chnages along with the username
+This file i am makeing chnages along with the username.
+I am modifing this code to test
